syntax = "proto3";

package tearleads.v1;

import "tearleads/v1/common.proto";

service ChatService {
  rpc PostCompletions(JsonRequest) returns (JsonResponse);
}
